[package]
name = "xgzp6897d"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Ignatov <nikita@ignatov.com>"]
homepage = "https://github.com/nikitaignatov/xgzp6897d-rs"
repository = "https://github.com/nikitaignatov/xgzp6897d-rs"
description = "i2c Driver for the XGZP6807D differential pressure sensor."
license = "MIT OR Apache-2.0"
keywords = [
    "xgzp6897d",
    "pressure",
    "sensor",
    "i2c",
    "pitot"
]
categories = ["embedded", "no-std", "hardware-support"]

[lib]
name = "xgzp6897d"

[dependencies]
embedded-hal = "1.0.0"

[features]
default = ["sync"]
sync = []